// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - todo_write tool call snapshot (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Update my todo list

⚙ Update todo
  └─ Updated (1/2 - 50%)
"
`;

exports[`ChatDisplay - todo_write tool call snapshot (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Update my todo list

⚙ Update todo
  └─ Running ...
"
`;
